# DeepSAR

./: .gitignore  LICENSE.txt  README.md  deepsar_demo.ipynb  environment-cudf.yml  environment-torch.yml  environment.yml  pyproject.toml  run_many_scripts.sh  run_script.sh
data/CHELSA/: envidat.txt
deepsar/: benchmarker.py  cld.py  dataset.py  deep4pweibull.py  deepsar_model.py  ensemble_model.py  ensemble_trainer.py  generate_sar_data_eva.py  mlp.py  neural_4pweibull.py  plotting.py  trainer.py  utils.py
deepsar/data_processing/: utils_env_pred.py  utils_eva.py  utils_gift.py  utils_landcover.py  utils_polygons.py
figures/: plot_loc_eva_dataset.ipynb
scripts/: MLP_fit_torch_SBCV.py  MLP_fit_torch_all_habs_ensemble.py  MLP_project_simple_full_grad_ensemble.py  benchmark.py  chao2_estimator.py  cross_validate.py  cross_validate_parallel.py  debugging.py  export_SR_maps.py  get_true_SAR_ensemble.py  get_true_sar.py  project.py  projection_debug.py  scaling.py  single_export_SR_maps.py  train.py
scripts/MWE/: MLP.py  (+5 more)
src/: EnsembleModel.py  MLP.py  NNSAR.py  NNSARRelu.py  __init__.py  cld.py  dataset.py  ensemble_model.py  generate_SAR_data_EVA.py  generate_sar_data_eva.py  mlp.py  model_library.py  model_validation.py  neural_4pweibull.py  neural_weibull.py  plotting.py  power_model.py  sar.py  sklearn_models.py  trainer.py  utils.py
tests/: power_model_pipeline.py  test_crs.py  test_eva_processing.py  test_generate_SAR_data.py  test_generate_SAR_data_cinf.py  test_mixed_model_Weibull.py  test_model_validation.py  test_power_model.py  test_sklearn_models.py
(+183 files in other folders)
