[project]
name = "deepsar"
version = "0.1.0"
description = "Deep species-area relationship models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "captum>=0.8.0",
    "fastparquet>=2024.11.0",
    "geopandas>=1.1.1",
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
